# deforestation-risk-palmoil

./: .gitignore  README.md  WORKFLOW.md  pyproject.toml  run.py
.claude/: CLAUDE.md
.claude/skills/: pipeline-check.md  pipeline-run.md
active/: run.py
active/configs/: central-kalimantan.yaml  east-kotawaringin.yaml  schema.json  template.yaml
active/data/user_inputs/: README.txt
active/notebooks/: 01_download.ipynb  02_process.ipynb  03_model.ipynb
active/palmdef_risk/: __init__.py  cache.py  constants.py  parallel.py
active/palmdef_risk/data/: _ee_utils.py  forest.py  mill.py  plantation.py  user_inputs.py  utm.py  variables.py
active/palmdef_risk/io/: __init__.py  config.py  helpers.py  run.py
active/palmdef_risk/model/: __init__.py  diagnostics.py  icar.py  predict.py  reports.py  sensitivity.py
active/palmdef_risk/process/: __init__.py  align.py  distances.py  gravity.py  plantation.py
active/tests/: conftest.py  test_cache.py  test_run_cli.py
active/tests/data/: test_ee_utils.py  test_forest.py  test_mill.py  test_plantation_descals.py  test_user_inputs.py  test_utm.py  test_variables_river_big.py
active/tests/io/: __init__.py  test_config.py  test_config_river.py
active/tests/model/: test_diagnostics.py  test_icar.py  test_predict.py  test_reports.py  test_sensitivity.py
active/tests/process/: test_align.py  test_distances.py  test_gravity.py  test_plantation.py
cache/mill/2020_2024/: mill_t2.gpkg  mill_t3.gpkg
configs/: central-kalimantan.yaml  east-kotawaringin.yaml  schema.json  template.yaml
docs/: WORKFLOW.md
docs/superpowers/plans/: 2026-05-19-palmdef-risk-refactor-plan-part1.md  2026-05-19-palmdef-risk-refactor-plan-part2.md  2026-06-12-big-river-source.md  2026-06-12-plantation-resid-5variant-forecast.md
docs/superpowers/specs/: 2026-05-19-palmdef-risk-refactor-design.md  2026-06-12-big-river-source-design.md  2026-06-12-plantation-resid-5variant-forecast-design.md
notebooks/: 01_download.ipynb  02_process.ipynb  03_model.ipynb
palmdef_risk/: parallel.py
palmdef_risk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
palmdef_risk/data/: __init__.py  forest.py  mill.py  user_inputs.py  variables.py
palmdef_risk/io/: config.py  helpers.py  run.py
palmdef_risk/model/: diagnostics.py  gwr.py  icar.py  predict.py  sensitivity.py
palmdef_risk/process/: align.py  correlation.py  distances.py  gravity.py  lq.py
palmoil_risk/: __init__.py
palmoil_risk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
palmoil_risk/data/: __init__.py  forest.py  mill.py  user_inputs.py  variables.py
palmoil_risk/io/: __init__.py  run.py
palmoil_risk/model/: __init__.py  diagnostics.py  gwr.py  icar.py  predict.py
palmoil_risk/process/: __init__.py  align.py  correlation.py  lq.py
tests/: conftest.py  test_cache.py  test_import.py  test_parallel.py
tests/data/: __init__.py  test_mill.py  test_user_inputs.py  test_variables.py
tests/io/: test_config.py  test_run.py
tests/model/: test_diagnostics.py  test_gwr.py  test_icar.py  test_predict.py  test_sensitivity.py
tests/process/: test_align.py  test_lq.py
