[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "palmdef-risk"
version = "0.1.0"
requires-python = ">=3.10"
# Heavy geospatial deps (gdal, forestatrisk, earthengine-api, osmnx)
# are managed by conda-far. This file enables `pip install -e .`.
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28",
    "papermill>=2.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "nbmake>=1.3", "nbval>=0.10"]

[tool.setuptools.packages.find]
where = ["."]
include = ["palmdef_risk*"]

[tool.pytest.ini_options]
# Override PROJ_LIB / PROJ_DATA so that PostgreSQL/PostGIS's stale proj.db
# (installed at C:\Program Files\PostgreSQL\...) does not shadow the
# conda-far PROJ database.  pytest-env sets these before pytest imports
# anything, which is required because proj.dll is loaded at Python startup.
env = [
    "PROJ_LIB=C:\\Users\\musli\\.conda\\envs\\conda-far\\Library\\share\\proj",
    "PROJ_DATA=C:\\Users\\musli\\.conda\\envs\\conda-far\\Library\\share\\proj",
]
