[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "palmdef-risk"
version = "0.1.0"
requires-python = ">=3.10"
# Heavy geospatial deps (gdal, forestatrisk, earthengine-api, osmnx)
# are managed by the palmdef-risk conda env. This file enables `pip install -e .`.
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28",
    "papermill>=2.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "nbmake>=1.3", "nbval>=0.10"]

[tool.setuptools.packages.find]
# Package source now lives under active/ (see repo layout in .claude/CLAUDE.md).
where = ["active"]
include = ["palmdef_risk*"]

[tool.pytest.ini_options]
# Tests live under active/tests/ after the repo reorganization.
testpaths = ["active/tests"]
# Belt-and-suspenders PROJ fix: pytest-env sets these before Python starts so
# PROJ.dll loads the correct database (PostgreSQL ships a stale proj.db that
# shadows the conda one). conftest.py also probes portably at runtime; both
# must stay in sync. See CLAUDE.md "PROJ / proj.db conflict" note.
env = [
    "PROJ_LIB=C:\\Users\\musli\\.conda\\envs\\palmdef-risk\\Library\\share\\proj",
    "PROJ_DATA=C:\\Users\\musli\\.conda\\envs\\palmdef-risk\\Library\\share\\proj",
]
